examples/datalog/15_arithmetic/35_complex_nested.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_nested_arith
Knowledge graph 'test_nested_arith' created.
Switched to knowledge graph: test_nested_arith
> .kg use test_nested_arith
Switched to knowledge graph: test_nested_arith
> +base[(2,)].
Inserted 1 fact(s) into 'base'.
> nested(X, Y) :- base(X), Y = ((X + 1) * 2 + 3) * 4.
Script error: Query execution failed: Unsafe rule: Atom { relation: "nested", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
